fix: fixed some alignment issues with margins

--- a/src/stylesheets/PromptForm.scss
+++ b/src/stylesheets/PromptForm.scss
@@ -8,10 +8,14 @@
       width: 300px;
       height: 40px;
       margin-bottom: 1em;
-      margin-right: 1em;;
+      margin-right: 1em;
       border-radius: 2em;
       border: solid 1px rgb(235, 234, 234);
       text-align: center;
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
   input.btn-info {
